--- a/test/index.right.html
+++ b/test/index.right.html
@@ -90,7 +90,8 @@
         var slideout = new Slideout({
           'panel': document.getElementById('panel'),
           'menu': document.getElementById('menu'),
-          'side': 'right'
+          'side': 'right',
+          padding: 256
         });
 
         document.querySelector('.js-slideout-toggle').addEventListener('click', function() {
